Fixing a stupid thing I did. Now JSON roundtrips don't happen during table serialization. They were happening all the time, even in release builds. Sorry. Also giving the python test more memory and removing aggressive options.